@@ -105,6 +105,17 @@ microsite.with {
     /** end:microsite **/
 }
 
+//customization of the Jbake gradle plugin used by the generateSite task
+jbake.with {
+    // possibility to configure additional asciidoctorj plugins used by jbake
+    plugins = [ ]
+
+    // possibiltiy to configure additional asciidoctor attributes passed to the jbake task
+    asciidoctorAttributes = [ ]
+
+    /** end:jbake **/
+}
+
 //*****************************************************************************************
 
 //Configuration for exportChangelog
