@@ -50,3 +50,7 @@ referenceDocFile = reference-doc.docx
 mavenRepository = https://plugins.gradle.org/m2/
 mavenUsername =
 mavenPassword =
+
+depsMavenRepository = https://repo.maven.apache.org/maven2/
+depsMavenUsername =
+depsMavenPassword =
