@@ -19,6 +19,7 @@ and this project tries to adhere to https://semver.org/spec/v2.0.0.html[Semantic
 === added
 * https://github.com/docToolchain/docToolchain/issue/692[#692 generateSite: navigation tree instead of a list on the left]
 * https://github.com/docToolchain/docToolchain/pull/886[#886 Add the possibility to set maven credentials]
+* https://github.com/docToolchain/docToolchain/issue/848[#848 generateSite: add customisation possibilities for the jbake gradle plugin]
 
 === changed
 2022-05-08::
